--- a/package.json
+++ b/package.json
@@ -8,5 +8,19 @@
     "email": "1290657123@qq.com"
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "del": "^4.1.1",
+    "gulp": "^4.0.2",
+    "gulp-bump": "^3.1.3",
+    "gulp-data": "^1.3.1",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-rename": "^1.4.0",
+    "gulp-size": "^3.0.0",
+    "gulp-template": "^5.0.0",
+    "gulp-uglify": "^3.0.2",
+    "next-nice-comments": "github:afeiship/next-nice-comments",
+    "prettier": "^1.17.1",
+    "uglify-save-license": "^0.4.1"
+  }
 }
